implement issueA and tested