@@ -6,18 +6,18 @@ import java.util.concurrent.ConcurrentHashMap;
 
 public class InMemoryReservationRepository implements ReservationRepository {
     private final Map<String, Reservation> byId = new ConcurrentHashMap<>();
-    private final Map<String, List<Reservation>> byClient = new ConcurrentHashMap<>();
+    private final Map<String, List<Reservation>> byTrip = new ConcurrentHashMap<>();
 
     @Override
     public void save(Reservation r) {
         byId.put(r.getReservationId(), r);
-        byClient.computeIfAbsent(r.getClientId(), k -> new ArrayList<>()).add(r);
+        byTrip.computeIfAbsent(r.getTripId(), k -> new ArrayList<>());
+        List<Reservation> list = byTrip.get(r.getTripId());
+        list.removeIf(x -> x.getReservationId().equals(r.getReservationId()));
+        list.add(r);
     }
 
-    @Override
-    public Reservation findById(String reservationId) {
-        return byId.get(reservationId);
-    }
+    @Override public Reservation findById(String id) { return byId.get(id); }
 
     @Override
     public Collection<Reservation> findAll() {
@@ -25,7 +25,9 @@ public class InMemoryReservationRepository implements ReservationRepository {
     }
 
     @Override
-    public Collection<Reservation> findByClientId(String clientId) {
-        return Collections.unmodifiableCollection(byClient.getOrDefault(clientId, List.of()));
+    public Collection<Reservation> findByTripId(String tripId) {
+        return Collections.unmodifiableList(byTrip.getOrDefault(tripId, List.of()));
     }
+
+    @Override public boolean exists(String id) { return byId.containsKey(id); }
 }
